<resources>
    <string name="app_name">Studently</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="tools">Tools</string>
    <string name="assignment_manager">Assignment Manager</string>
    <string name="exam_countdown">Exam Countdown</string>
    <string name="to_do_list">To-Do List</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="subject">Subject</string>

    <string name="classroom">Classroom</string>
    <string name="add_location">add location</string>
    <string name="color">Color</string>
    <string name="additional_details">Additional Details:</string>
    <string name="enter_details">Enter Details</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="exams">Exams</string>
</resources>
